# Ramp-Hackathon

./: .gitignore  CLAUDE.md  README.md
backend/: main.py  models.py  pyproject.toml  requirements.txt
backend/intel/analysis/: differ.py  reporter.py
backend/intel/collectors/: docs_tracker.py  github_tracker.py  screenshot.py  web_scraper.py  web_search.py
backend/intel/delivery/: emailer.py
backend/intel/state/: snapshot.py
backend/intel/templates/: report_email.html
backend/routers/: email_settings.py  projects.py  reports.py  runs.py  schedule.py
backend/services/: keyword_generator.py  pipeline.py  project_store.py  run_manager.py  scheduler.py  sitemap_discovery.py
competitor-email-ui/: package-lock.json  package.json  tailwind.config.ts
competitor-email-ui/app/: globals.css
competitor-email-ui/app/dashboard/: page.tsx
competitor-email-ui/app/history/: page.tsx
competitor-email-ui/components/dashboard/: DateTabs.tsx  EmailDisplay.tsx  RoleSubtabs.tsx  StatusArea.tsx
competitor-email-ui/components/history/: HistoryCard.tsx
competitor-email-ui/components/layout/: Navbar.tsx
competitor-email-ui/components/wizard/: WizardShell.tsx  WizardStepper.tsx
competitor-email-ui/hooks/: useStatusCycle.ts
competitor-email-ui/lib/: placeholder-data.ts  types.ts  wizard-context.tsx
frontend/: INPUTS.md  UI.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/history/: page.tsx
frontend/lib/: api.ts  placeholder-data.ts  types.ts  utils.ts  wizard-context.tsx
(+16 files in other folders)
